--- a/src/TelnetingMythTv.ConsoleApp/TelnetingMythTv.ConsoleApp.csproj
+++ b/src/TelnetingMythTv.ConsoleApp/TelnetingMythTv.ConsoleApp.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -13,6 +13,7 @@
     <OldToolsVersion>2.0</OldToolsVersion>
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
+    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -38,4 +39,10 @@
     <Compile Include="AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <ProjectReference Include="..\TelnetingMythTv\TelnetingMythTv.csproj">
+      <Project>{B8E623AA-B4E1-4862-8A4F-3ADF0A23B18A}</Project>
+      <Name>TelnetingMythTv</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
