--- a/src/TelnetingMythTv.Tests/TelnetingMythTv.Tests.csproj
+++ b/src/TelnetingMythTv.Tests/TelnetingMythTv.Tests.csproj
@@ -13,6 +13,7 @@
     <OldToolsVersion>2.0</OldToolsVersion>
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
+    <RootNamespace>TelnetingMythTv.Tests</RootNamespace>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -46,6 +47,7 @@
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="MythProtocolTests.cs" />
     <Compile Include="StringFormatTests.cs" />
+    <Compile Include="ViewRecordingsCommandTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TelnetingMythTv\TelnetingMythTv.csproj">
