--- a/src/TelnetingMythTv/TelnetingMythTv.csproj
+++ b/src/TelnetingMythTv/TelnetingMythTv.csproj
@@ -14,6 +14,7 @@
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
     <RootNamespace>TelnetingMythTv</RootNamespace>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -35,11 +36,24 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Core">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="Command.cs" />
+    <Compile Include="Commands.cs" />
+    <Compile Include="Connection.cs" />
+    <Compile Include="ConnectionFactory.cs" />
+    <Compile Include="DbConnectionFactory.cs" />
+    <Compile Include="IConnection.cs" />
+    <Compile Include="IConnectionFactory.cs" />
+    <Compile Include="IDbConnectionFactory.cs" />
+    <Compile Include="IQuery.cs" />
+    <Compile Include="MythProtocolExtensions.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
@@ -48,6 +62,8 @@
     <Compile Include="Recording.cs" />
     <Compile Include="ServerCommand.cs" />
     <Compile Include="ServerConnection.cs" />
+    <Compile Include="StringExtensions.cs" />
+    <Compile Include="ViewRecordingsCommand.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\Settings.settings">
